[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Menu/TitleBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/TitleMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/SettingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/LevelSelectMenu.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

void fragment() {
	vec3 image = textureLod(SCREEN_TEXTURE, SCREEN_UV, 3.0).rgb;
	vec2 center = SCREEN_UV - vec2(0.5, 0.5);
	center = vec2(abs(center.x), abs(center.y));
	float vignette = 0.75f - (sqrt(pow(center.x, 2) + pow(center.y, 2)));
	image.r *= vignette;
	image.g *= vignette;
	image.b *= vignette;
	COLOR.rgb = image;
}"

[sub_resource type="ShaderMaterial" id=2]

shader = SubResource( 1 )

[node name="TitleScreen" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TitleBackground" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleMenu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="LevelSelectMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

